--- a/2nd semestr/HW_3/List/ConsoleApplication4/ConsoleApplication4.csproj
+++ b/2nd semestr/HW_3/List/ConsoleApplication4/ConsoleApplication4.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AFC88CE5-10BA-4808-8E40-0643EB7AD7DB}</ProjectGuid>
+    <ProjectGuid>{F7CE032C-9D9E-4CB0-B3C5-7B73844AA3C5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>List</RootNamespace>
-    <AssemblyName>List</AssemblyName>
+    <RootNamespace>ConsoleApplication4</RootNamespace>
+    <AssemblyName>ConsoleApplication4</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
