--- a/2nd semestr/HW_3/List/ConsoleApplication4/List.csproj
+++ b/2nd semestr/HW_3/List/ConsoleApplication4/List.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{24B7622D-7229-417F-AB7D-3A175DBA5157}</ProjectGuid>
+    <ProjectGuid>{F7CE032C-9D9E-4CB0-B3C5-7B73844AA3C5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HashTable</RootNamespace>
-    <AssemblyName>HashTable</AssemblyName>
+    <RootNamespace>List</RootNamespace>
+    <AssemblyName>ConsoleApplication4</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,9 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HashTable.cs" />
+    <Compile Include="PointerList.cs" />
     <Compile Include="List.cs" />
-    <Compile Include="HashProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
