--- a/2nd semestr/HW_3/Stack/Stack.Test/Stack.Test.csproj
+++ b/2nd semestr/HW_3/Stack/Stack.Test/Stack.Test.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7E315848-9227-4C04-8F6E-A8064D69B039}</ProjectGuid>
+    <ProjectGuid>{94254AC5-CBB0-4221-BD43-F8B01CFAC5A6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>List.Tests</RootNamespace>
-    <AssemblyName>List.Tests</AssemblyName>
+    <RootNamespace>Stack.Test</RootNamespace>
+    <AssemblyName>Stack.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -50,13 +50,13 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="ListTests.cs" />
+    <Compile Include="StackTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ConsoleApplication4\List.csproj">
-      <Project>{f7ce032c-9d9e-4cb0-b3c5-7b73844aa3c5}</Project>
-      <Name>List</Name>
+    <ProjectReference Include="..\ConsoleApplication1\Stack.csproj">
+      <Project>{8eda6813-16b2-448a-bbe0-432933c653be}</Project>
+      <Name>Stack</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
