--- a/2nd semestr/HW_3/StackCalculator/StackCalculator/StackCalculator.csproj
+++ b/2nd semestr/HW_3/StackCalculator/StackCalculator/StackCalculator.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{24B7622D-7229-417F-AB7D-3A175DBA5157}</ProjectGuid>
+    <ProjectGuid>{0237113C-7B9F-458D-A41B-60BB1E1DBDB7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HashTable</RootNamespace>
-    <AssemblyName>HashTable</AssemblyName>
+    <RootNamespace>StackCalculator</RootNamespace>
+    <AssemblyName>StackCalculator</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,13 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HashTable.cs" />
-    <Compile Include="List.cs" />
-    <Compile Include="HashProgram.cs" />
+    <Compile Include="ArrayStack.cs" />
+    <Compile Include="Calculator.cs" />
+    <Compile Include="PointerStack.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
